wrapped application images in anchor tags, fixed anchor tag from bleeding out of image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,9 +176,13 @@ h3 {
     flex-direction: column;
     align-content: space-around;
 }
+
+.app-wrapper a {
+    width: 95%;
+}
     
 .app-wrapper img {
-    width: 90%;
+    width: 95%;
     height: 150px;
     margin: 0;
 }
